{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 12,
  "lineage": "2a413b36-e1ac-b9e2-bbb6-5a052419c28d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgvet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/networkSecurityGroups/nsg-misan5qa",
            "location": "eastus2",
            "name": "nsg-misan5qa",
            "resource_group_name": "RG-REDE-SAN5-QA",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow Azure Load Balancer inbound traffic",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-healthprobe-in-10-161-1-0-26-v9",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI Supportability through Corpnet ranges",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corppublic-in-10-161-1-0-26-v9",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI Supportability",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1440",
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corpsaw-in-10-161-1-0-26-v9",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI internal inbound traffic",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-in-10-161-1-0-26-v9",
                "priority": 104,
                "protocol": "*",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI internal outbound traffic",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-out-10-161-1-0-26-v9",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI provisioning Control Plane Deployment and Authentication Service",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1438",
                  "1440",
                  "1452",
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-sqlmgmt-in-10-161-1-0-26-v9",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "SqlManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI services outbound traffic over https",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "12000",
                  "443"
                ],
                "direction": "Outbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-services-out-10-161-1-0-26-v9",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow access to data",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_tds_inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow inbound geodr traffic inside the virtual network",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_geodr_inbound",
                "priority": 1200,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow inbound redirect traffic to Managed Instance inside the virtual network",
                "destination_address_prefix": "10.161.19.0/26",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "11000-11999",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_redirect_inbound",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow outbound geodr traffic inside the virtual network",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5022",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow_geodr_outbound",
                "priority": 1200,
                "protocol": "Tcp",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow outbound linkedserver traffic inside the virtual network",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow_linkedserver_outbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow outbound redirect traffic to Managed Instance inside the virtual network",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "11000-11999",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow_redirect_outbound",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "10.161.19.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all other inbound traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny_all_inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all other outbound traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny_all_outbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Ambiente": "QA",
              "Aplicacao": "SAN5",
              "Arquiteto Responsável": "Rafael Faita",
              "Deploy": "Terraform",
              "Fornecedor": "Accenture",
              "Responsavel": "Marcelo Castanho"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rgvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rtmgm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/routeTables/rt-misan5qa",
            "location": "eastus2",
            "name": "rt-misan5qa",
            "resource_group_name": "RG-REDE-SAN5-QA",
            "route": [
              {
                "address_prefix": "10.161.19.0/26",
                "name": "Microsoft.Sql-managedInstances_UseOnly_subnet-10-161-19-0-26-to-vnetlocal",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "13.64.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-13-64-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "13.104.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-13-104-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.33.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-33-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.34.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-34-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.36.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-36-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.40.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-40-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.48.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-48-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.64.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-64-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.128.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-128-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.135.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-135-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.136.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-136-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.140.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-140-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.143.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-143-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.144.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-144-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.150.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-150-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.160.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-160-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.176.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-176-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.180.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-180-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.184.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-184-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "20.192.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-20-192-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "40.64.0.0/10",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-40-64-10-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.4.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-4-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.8.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-8-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.10.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-10-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.18.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-18-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.51.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-51-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.53.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-53-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.103.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-103-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.104.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-104-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.132.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-132-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.136.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-136-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.138.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-138-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.140.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-140-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.144.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-144-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.96.0.0/12",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-96-12-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.112.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-112-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.125.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-125-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.126.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-126-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.130.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-130-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.132.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-132-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.136.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-136-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.145.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-145-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.146.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-146-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.148.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-148-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.152.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-152-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.160.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-160-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "52.224.0.0/11",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-52-224-11-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "64.4.0.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-64-4-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "65.52.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-65-52-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "66.119.144.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-66-119-144-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "70.37.0.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-70-37-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "70.37.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-70-37-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "91.190.216.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-91-190-216-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "94.245.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-94-245-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.9.8.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-9-8-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.156.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-156-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.157.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-157-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.25.158.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-25-158-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.36.96.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-36-96-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "103.255.140.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-103-255-140-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.40.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-40-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.146.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-146-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "104.208.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-104-208-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "111.221.16.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-111-221-16-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "111.221.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-111-221-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "129.75.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-129-75-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.107.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-107-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.1.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-1-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.3.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-3-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.5.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-5-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.6.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-6-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.8.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-8-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.12.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-12-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.16.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-16-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.18.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-18-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.21.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-21-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.22.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-22-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.24.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-24-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.32.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-32-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.61.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-61-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.62.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-62-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.64.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-64-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "131.253.128.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-131-253-128-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "132.245.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-132-245-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "134.170.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-134-170-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "134.177.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-134-177-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "137.116.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-137-116-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "137.135.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-137-135-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "138.91.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-138-91-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "138.196.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-138-196-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "139.217.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-139-217-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "139.219.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-139-219-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "141.251.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-141-251-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "146.147.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-146-147-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "147.243.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-147-243-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "150.171.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-150-171-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "150.242.48.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-150-242-48-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.54.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-54-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.56.0.0/14",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-56-14-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "157.60.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-157-60-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "167.105.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-167-105-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "167.220.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-167-220-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "168.61.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-168-61-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "168.62.0.0/15",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-168-62-15-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "191.232.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-191-232-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.32.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-32-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.48.225.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-48-225-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.84.159.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-84-159-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.84.160.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-84-160-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "192.197.157.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-192-197-157-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "193.149.64.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-193-149-64-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "193.221.113.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-193-221-113-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "194.69.96.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-194-69-96-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "194.110.197.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-194-110-197-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.105.232.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-105-232-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.200.130.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-200-130-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "198.206.164.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-198-206-164-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.60.28.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-60-28-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.74.210.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-74-210-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.103.90.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-103-90-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.103.122.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-103-122-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.242.32.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-242-32-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.242.48.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-242-48-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "202.89.224.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-202-89-224-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.13.120.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-13-120-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.14.180.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-14-180-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.135.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-135-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.179.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-179-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.181.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-181-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.188.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-188-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.195.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-195-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.196.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-196-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.252.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-252-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.152.18.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-152-18-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.152.140.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-152-140-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.192.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-192-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.194.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-194-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.197.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-197-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.198.0/23",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-198-23-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.200.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-200-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.208.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-208-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.231.236.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-231-236-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "205.174.224.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-205-174-224-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "206.138.168.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-206-138-168-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "206.191.224.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-206-191-224-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "207.46.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-207-46-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "207.68.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-207-68-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.68.136.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-68-136-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.76.44.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-76-44-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "208.84.0.0/21",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-208-84-21-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "209.240.192.0/19",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-209-240-192-19-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "213.199.128.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-213-199-128-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "216.32.180.0/22",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-216-32-180-22-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "216.220.208.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-216-220-208-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "23.96.0.0/13",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-23-96-13-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "42.159.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-42-159-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.13.0.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-13-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.107.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-107-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.116.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-116-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.120.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-120-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.120.128.0/17",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-120-128-17-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "51.124.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-51-124-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "102.37.0.0/18",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-102-37-18-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "102.133.0.0/16",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-102-133-16-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "199.30.16.0/20",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-199-30-16-20-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "204.79.180.0/24",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-204-79-180-24-nexthop-internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5"
            ],
            "tags": {
              "Ambiente": "QA",
              "Aplicacao": "SAN5",
              "Arquiteto Responsável": "Rafael Faita",
              "Deploy": "Terraform",
              "Fornecedor": "Accenture",
              "Responsavel": "Marcelo Castanho"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rgvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetmgm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.161.19.0/26",
            "address_prefixes": [
              "10.161.19.0/26"
            ],
            "delegation": [
              {
                "name": "mysqldelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Sql/managedInstances"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5",
            "name": "subnet-mgm-san5",
            "resource_group_name": "RG-REDE-SAN5-QA",
            "virtual_network_name": "FOZ-VNET006-DC"
          },
          "dependencies": [
            "azurerm_resource_group.rgvnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgassociation",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5",
            "network_security_group_id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/networkSecurityGroups/nsg-misan5qa",
            "subnet_id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgvet",
            "azurerm_resource_group.rgvnet",
            "azurerm_subnet.subnetmgm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5",
            "route_table_id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/routeTables/rt-misan5qa",
            "subnet_id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5"
          },
          "dependencies": [
            "azurerm_resource_group.rgvnet",
            "azurerm_route_table.rtmgm",
            "azurerm_subnet.subnetmgm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.161.18.0/23"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "827ae792-cea2-4814-97c0-fc54bf7cb538",
            "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC",
            "location": "eastus2",
            "name": "FOZ-VNET006-DC",
            "resource_group_name": "RG-REDE-SAN5-QA",
            "subnet": [
              {
                "address_prefix": "10.161.18.0/24",
                "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-aks-san5",
                "name": "subnet-aks-san5",
                "security_group": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-AKS-SAN5-QA/providers/Microsoft.Network/networkSecurityGroups/aksnsg"
              },
              {
                "address_prefix": "10.161.19.0/26",
                "id": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/virtualNetworks/FOZ-VNET006-DC/subnets/subnet-mgm-san5",
                "name": "subnet-mgm-san5",
                "security_group": "/subscriptions/fac08008-6727-4ad0-a5e8-b699c57cbd91/resourceGroups/RG-REDE-SAN5-QA/providers/Microsoft.Network/networkSecurityGroups/nsg-misan5qa"
              }
            ],
            "tags": {
              "Ambiente": "QA",
              "Aplicacao": "SAN5",
              "Arquiteto Responsável": "Rafael Faita",
              "Deploy": "Terraform",
              "Fornecedor": "Accenture",
              "Responsavel": "Marcelo Castanho"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rgvnet"
          ]
        }
      ]
    }
  ]
}